# classic-editor

./: .eslintrc.js  .gitignore  .prettierignore  README.md  index.html  main.js  package-lock.json  package.json  vite.config.js
src/: main.js  routes.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/settings/: mod.rs  models.rs
src/app/assets/: app.css
src/app/assets/sass/: fonts.scss  main.scss  reset.scss  variables.scss
src/app/assets/sass/classic-editor/: content.scss  header.scss  toolbar.scss
src/app/components/: ClassicEditor.vue  EditorToolbar.vue  SettingsModal.vue
src/app/mixins/: PostFormatters.js
src/app/model/: SettingStore.js
src/app/ui/: App.vue
src/components/: ClassicEditor.vue  SettingsModal.vue
src/components/modals/: SettingsModal.vue
src/editor/ui/: Editor.vue
src/pages/editor/: EditorPage.vue
src/pages/home/: HomePage.vue
src/pages/posts/: PostPage.vue
src/posts/ui/: PostTable.vue  Posts.vue
src/settings/ui/: SettingsModal.vue
