[package]
name = "classic_editor"
version = "0.1.0"
description = "Classic Editor"
authors = ["WP Refined"]
license = ""
repository = ""
default-run = "classic_editor"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["http-all"] }
rusqlite = "0.26.3"
dotenv_codegen = "0.15.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
